fix <p> alignment on about page

--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,10 @@ img {
   text-align: left;
 }
 
+#about p {
+  text-align: left;
+}
+
 #work h2 {
   text-align: center;
 }
